[gd_scene load_steps=40 format=3 uid="uid://dxv8vd30spgr0"]

[ext_resource type="Script" uid="uid://cw40javf8k3s2" path="res://Scripts/Menu/menu.gd" id="1_wv7rd"]
[ext_resource type="PackedScene" uid="uid://dccq306hysssm" path="res://Assets/Ultimate Platformer Pack - Dec 2021/Nature/glTF/Grass_2.gltf" id="1_wxa3f"]
[ext_resource type="PackedScene" uid="uid://dx8k42pe5r54s" path="res://Assets/Ultimate Platformer Pack - Dec 2021/Nature/glTF/Grass_1.gltf" id="2_0401g"]
[ext_resource type="PackedScene" uid="uid://2mnhuh6pymar" path="res://Assets/Ultimate Platformer Pack - Dec 2021/Nature/glTF/Tree_Fruit.gltf" id="3_lnqkc"]
[ext_resource type="PackedScene" uid="uid://bycnv3ckf7t2m" path="res://Assets/Ultimate Platformer Pack - Dec 2021/Nature/glTF/RockPlatform_Tall.gltf" id="4_wv7rd"]
[ext_resource type="PackedScene" uid="uid://e80umn3xvue0" path="res://Assets/Ultimate Platformer Pack - Dec 2021/Nature/glTF/Rock_2.gltf" id="5_k0qon"]
[ext_resource type="PackedScene" uid="uid://dyrcay505xci4" path="res://Assets/Ultimate Platformer Pack - Dec 2021/Nature/glTF/Rock_1.gltf" id="6_jqvb7"]
[ext_resource type="PackedScene" uid="uid://cryxlmgbdbqdd" path="res://Assets/Ultimate Platformer Pack - Dec 2021/Nature/glTF/RockPlatforms_1.gltf" id="7_6j47b"]
[ext_resource type="PackedScene" uid="uid://mqpmggsdx6y1" path="res://Assets/Ultimate Platformer Pack - Dec 2021/Nature/glTF/RockPlatforms_Medium.gltf" id="8_m7ue0"]
[ext_resource type="PackedScene" uid="uid://ddrsgawl4cb6f" path="res://Assets/Ultimate Platformer Pack - Dec 2021/Nature/glTF/Bush_Fruit.gltf" id="9_ihsho"]
[ext_resource type="PackedScene" uid="uid://dnbjn3blfknxx" path="res://Assets/Ultimate Platformer Pack - Dec 2021/Nature/glTF/Bush.gltf" id="10_cc6hi"]
[ext_resource type="PackedScene" uid="uid://j0hn8au13ddw" path="res://Assets/Ultimate Platformer Pack - Dec 2021/Nature/glTF/Tree.gltf" id="11_4a7rt"]
[ext_resource type="PackedScene" uid="uid://dlurtr0vo03bs" path="res://Assets/Ultimate Platformer Pack - Dec 2021/Nature/glTF/Grass_3.gltf" id="12_pcdb4"]
[ext_resource type="PackedScene" uid="uid://dvobh6jcmngc3" path="res://Assets/Ultimate Platformer Pack - Dec 2021/Nature/glTF/Cloud_1.gltf" id="13_s24qi"]
[ext_resource type="PackedScene" uid="uid://crtppkg5yx3b8" path="res://Assets/Ultimate Platformer Pack - Dec 2021/Nature/glTF/Cloud_3.gltf" id="14_wdypo"]
[ext_resource type="PackedScene" uid="uid://n34c2ynkw7hs" path="res://Assets/Ultimate Platformer Pack - Dec 2021/Nature/glTF/RockPlatforms_2.gltf" id="15_hwu5y"]
[ext_resource type="Texture2D" uid="uid://ceqf60a4yumpn" path="res://Assets/Images/clouds_anime_6k.jpg" id="16_fey7x"]
[ext_resource type="PackedScene" uid="uid://bd4yyupffymr0" path="res://Scenes/Menu/character_menu.tscn" id="17_0401g"]
[ext_resource type="PackedScene" uid="uid://5kockuc15ddu" path="res://Scenes/Menu/Door.tscn" id="18_lnqkc"]
[ext_resource type="Theme" uid="uid://cbaf64cm2n3qx" path="res://Resources/Utils/menu.tres" id="20_6j47b"]
[ext_resource type="Script" uid="uid://vpapqos28ttx" path="res://Scripts/Menu/gui.gd" id="20_cc6hi"]
[ext_resource type="StyleBox" uid="uid://t43ed07sxino" path="res://Resources/Utils/HoverButton.tres" id="21_m7ue0"]
[ext_resource type="StyleBox" uid="uid://co4lgbj6366pm" path="res://Resources/Utils/enterButton.tres" id="22_ihsho"]
[ext_resource type="Script" uid="uid://ddaut6midlvq4" path="res://Scripts/Menu/register.gd" id="24_4a7rt"]
[ext_resource type="Script" uid="uid://dg2upoq3bjsc0" path="res://Scripts/Menu/login.gd" id="25_pcdb4"]
[ext_resource type="Texture2D" uid="uid://xi355g67hqmx" path="res://Assets/Images/ICONO CARGA.png" id="26_4a7rt"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_rte3l"]
frequency = 0.4262
offset = Vector3(391.3, -478.26, 347.83)
fractal_octaves = 2
fractal_lacunarity = 4.0
fractal_gain = 2.0
fractal_weighted_strength = 0.4
domain_warp_enabled = true
domain_warp_type = 1

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_rm278"]
noise = SubResource("FastNoiseLite_rte3l")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_gy5e5"]
albedo_color = Color(0, 0.521569, 0, 1)
albedo_texture = SubResource("NoiseTexture2D_rm278")

[sub_resource type="BoxMesh" id="BoxMesh_nh6ej"]
size = Vector3(16, 1, 16)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_wv7rd"]
points = PackedVector3Array(-8, -0.5, -8, -8, 0.5, -8, 8, -0.5, -8, -8, -0.5, 8, -8, 0.5, 8, 8, 0.5, -8, 8, -0.5, 8, 8, 0.5, 8)

[sub_resource type="BoxShape3D" id="BoxShape3D_wv7rd"]
size = Vector3(1.85602, 2.672, 15.9664)

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_cnl06"]
panorama = ExtResource("16_fey7x")

[sub_resource type="Sky" id="Sky_6j47b"]
sky_material = SubResource("PanoramaSkyMaterial_cnl06")

[sub_resource type="Environment" id="Environment_30yoo"]
background_mode = 2
sky = SubResource("Sky_6j47b")

[sub_resource type="BoxShape3D" id="BoxShape3D_k0qon"]
size = Vector3(1.87256, 4.16418, 1.59778)

[sub_resource type="BoxShape3D" id="BoxShape3D_jqvb7"]
size = Vector3(1, 3.98132, 3.03247)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s24qi"]
bg_color = Color(0.193951, 0.155701, 0.316094, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.208675, 0.168288, 0.337808, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0, 0, 0, 0.74902)
shadow_size = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wdypo"]
bg_color = Color(0.208675, 0.168288, 0.337808, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.193951, 0.155701, 0.316094, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0, 0, 0, 0.811765)
shadow_size = 10

[node name="Menu" type="Node3D"]
script = ExtResource("1_wv7rd")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(-0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, -0.707107, 0.51875, 0, -2.97004)
material_override = SubResource("StandardMaterial3D_gy5e5")
mesh = SubResource("BoxMesh_nh6ej")

[node name="StaticBody3D" type="StaticBody3D" parent="MeshInstance3D"]
collision_layer = 8

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeshInstance3D/StaticBody3D"]
shape = SubResource("ConvexPolygonShape3D_wv7rd")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="MeshInstance3D/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.80155, 1.82703, -0.00799561)
shape = SubResource("BoxShape3D_wv7rd")

[node name="CollisionShape3D4" type="CollisionShape3D" parent="MeshInstance3D/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -9.00995, 0.991027, -0.00799561)
shape = SubResource("BoxShape3D_wv7rd")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="MeshInstance3D/StaticBody3D"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0.00224113, 0.991027, -8.91375)
shape = SubResource("BoxShape3D_wv7rd")

[node name="CollisionShape3D5" type="CollisionShape3D" parent="MeshInstance3D/StaticBody3D"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0.00224113, 0.991027, 8.82356)
shape = SubResource("BoxShape3D_wv7rd")

[node name="Ornament" type="Node3D" parent="."]
transform = Transform3D(-0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, -0.707107, 0.51875, 0, -2.97004)

[node name="Grass_22" parent="Ornament" instance=ExtResource("1_wxa3f")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.23908, -0.407047, 6.40267)

[node name="Grass_12" parent="Ornament" instance=ExtResource("2_0401g")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.27903, -0.467195, 6.11344)

[node name="Tree_Fruit2" parent="Ornament" instance=ExtResource("3_lnqkc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.31854, 0, -7.2174)

[node name="RockPlatform_Tall2" parent="Ornament" instance=ExtResource("4_wv7rd")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.42931, 0, 5.5889)

[node name="Rock_22" parent="Ornament" instance=ExtResource("5_k0qon")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.62944, 0, 6.94401)

[node name="Rock_12" parent="Ornament" instance=ExtResource("6_jqvb7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.14224, 0, 6.63731)

[node name="RockPlatforms_12" parent="Ornament" instance=ExtResource("7_6j47b")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.67828, 4.76837e-07, 3.30283)

[node name="RockPlatforms_Medium2" parent="Ornament" instance=ExtResource("8_m7ue0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.39688, 0, 5.79672)

[node name="Bush_Fruit2" parent="Ornament" instance=ExtResource("9_ihsho")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.01539, 5.12078, 2.54941)

[node name="Bush2" parent="Ornament" instance=ExtResource("10_cc6hi")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.602908, 0, 6.6401)

[node name="Tree_Fruit3" parent="Ornament" instance=ExtResource("3_lnqkc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.36551, -1.47342, -5.08561)

[node name="Tree2" parent="Ornament" instance=ExtResource("11_4a7rt")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.27903, 4.76837e-07, 6.63759)

[node name="Grass_32" parent="Ornament" instance=ExtResource("12_pcdb4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.62958, -4.76837e-07, 6.49283)

[node name="Grass_13" parent="Ornament" instance=ExtResource("2_0401g")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.43872, -0.454853, 6.24316)

[node name="Cloud_12" parent="Ornament" instance=ExtResource("13_s24qi")]
transform = Transform3D(0.252661, 0, -0.967555, 0, 1, 0, 0.967555, 0, 0.252661, -5.13208, 5.71398, -1.60091)

[node name="Cloud_32" parent="Ornament" instance=ExtResource("14_wdypo")]
transform = Transform3D(-0.510828, 0, 0.859683, 0, 1, 0, -0.859683, 0, -0.510828, -3.037, 7.30143, 4.93354)

[node name="RockPlatforms_22" parent="Ornament" instance=ExtResource("15_hwu5y")]
transform = Transform3D(-0.436566, 0, 0.899672, 0, 1, 0, -0.899672, 0, -0.436566, -5.70022, 0, -0.416172)

[node name="Settings" type="Node3D" parent="."]
transform = Transform3D(-0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, -0.707107, 0.51875, 0, -2.97004)

[node name="WorldEnvironment" type="WorldEnvironment" parent="Settings"]
environment = SubResource("Environment_30yoo")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Settings"]
transform = Transform3D(0.4112, 0.798862, -0.439015, -0.164695, 0.538801, 0.826178, 0.896544, -0.26742, 0.353123, 0, 7.78946, 0)
shadow_enabled = true

[node name="Camera3D" type="Camera3D" parent="Settings"]
transform = Transform3D(-0.608457, 0, 0.793587, 0, 1, 0, -0.793587, 0, -0.608457, 10.8298, 4, -8.68388)
fov = 89.1212

[node name="DoorCreate" parent="Settings" instance=ExtResource("18_lnqkc")]
transform = Transform3D(-0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, -0.707107, -0.342141, -9.53674e-07, 3.2578)
label = "Create Game"

[node name="Area3D" type="Area3D" parent="Settings/DoorCreate"]
transform = Transform3D(-0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, -0.707107, 0.25356, 9.53674e-07, -0.347758)
collision_layer = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Settings/DoorCreate/Area3D"]
transform = Transform3D(0.706502, 0, -0.707711, 0, 1, 0, 0.707711, 0, 0.706502, 0.436279, 1.58209, 0.298889)
shape = SubResource("BoxShape3D_k0qon")

[node name="DoorJoin" parent="Settings" instance=ExtResource("18_lnqkc")]
transform = Transform3D(-0.5, 0, 0.866025, 0, 1, 0, -0.866025, 0, -0.5, -3.36438, 0, -2.67926)
label = "Join Game"

[node name="Area3D2" type="Area3D" parent="Settings/DoorJoin"]
transform = Transform3D(-0.5, 0, -0.866025, 0, 1, 0, 0.866025, 0, -0.5, -0.139398, 0, 0.249846)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Settings/DoorJoin/Area3D2"]
transform = Transform3D(0.872274, 0, 0.489017, 0, 1, 0, -0.489017, 0, 0.872274, -0.47814, 1.49066, 0.129322)
shape = SubResource("BoxShape3D_jqvb7")

[node name="CharacterMenu" parent="." instance=ExtResource("17_0401g")]
transform = Transform3D(0.866026, -0.499757, -0.0155658, 0, 0.0311316, -0.999515, 0.5, 0.865606, 0.0269607, 1.94171, 0.464608, 3.39979)

[node name="GUI" type="CanvasLayer" parent="."]
script = ExtResource("20_cc6hi")

[node name="Control" type="Control" parent="GUI"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("20_6j47b")

[node name="MarginContainer" type="MarginContainer" parent="GUI/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 187.0
offset_top = -2.0
offset_right = -782.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/Control/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 50

[node name="Label" type="Label" parent="GUI/Control/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "RABBIT 
ROYALE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/Control/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 25

[node name="Enter" type="Button" parent="GUI/Control/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 20
theme_override_styles/hover = ExtResource("21_m7ue0")
theme_override_styles/normal = ExtResource("22_ihsho")
text = "ENTER"

[node name="Options" type="Button" parent="GUI/Control/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 20
theme_override_styles/hover = ExtResource("21_m7ue0")
theme_override_styles/normal = ExtResource("22_ihsho")
text = "OPTIONS"

[node name="Exit" type="Button" parent="GUI/Control/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 20
theme_override_styles/hover = ExtResource("21_m7ue0")
theme_override_styles/normal = ExtResource("22_ihsho")
text = "EXIT"

[node name="Register" type="MarginContainer" parent="GUI/Control"]
unique_name_in_owner = true
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -94.0
offset_top = -155.5
offset_right = 94.0
offset_bottom = 155.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("24_4a7rt")

[node name="PanelContainer" type="PanelContainer" parent="GUI/Control/Register"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_s24qi")

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/Control/Register/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="GUI/Control/Register/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Register"
horizontal_alignment = 1

[node name="UsernameRegister" type="LineEdit" parent="GUI/Control/Register/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 35
placeholder_text = "USERNAME"
alignment = 1

[node name="PasswordRegister" type="LineEdit" parent="GUI/Control/Register/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 35
placeholder_text = "PASSWORD"
alignment = 1

[node name="Email" type="LineEdit" parent="GUI/Control/Register/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 35
placeholder_text = "EMAIL"
alignment = 1

[node name="Gender" type="OptionButton" parent="GUI/Control/Register/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.580392, 0.572549, 0.6, 1)
theme_override_font_sizes/font_size = 35
selected = 0
item_count = 3
popup/item_0/text = "GENDER"
popup/item_0/id = 0
popup/item_0/disabled = true
popup/item_1/text = "MALE"
popup/item_1/id = 1
popup/item_2/text = "FEMALE"
popup/item_2/id = 2

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/Control/Register/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="RegisterButton" type="Button" parent="GUI/Control/Register/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.619608, 0.611765, 0.654902, 1)
theme_override_font_sizes/font_size = 35
text = "Register"

[node name="ExitRegister" type="Button" parent="GUI/Control/Register/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.619608, 0.611765, 0.654902, 1)
theme_override_font_sizes/font_size = 35
text = "Exit"

[node name="HTTPRegister" type="HTTPRequest" parent="GUI/Control/Register"]

[node name="Login" type="MarginContainer" parent="GUI/Control"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -189.0
offset_top = -104.0
offset_right = 189.0
offset_bottom = 104.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("25_pcdb4")

[node name="PanelContainer" type="PanelContainer" parent="GUI/Control/Login"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_wdypo")

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/Control/Login/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="GUI/Control/Login/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 25
text = "LOGIN"
horizontal_alignment = 1

[node name="Username" type="LineEdit" parent="GUI/Control/Login/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 35
placeholder_text = "USERNAME"
alignment = 1

[node name="Password" type="LineEdit" parent="GUI/Control/Login/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 35
placeholder_text = "PASSWORD"
alignment = 1
secret = true

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/Control/Login/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 50

[node name="Login" type="Button" parent="GUI/Control/Login/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.576471, 0.576471, 0.576471, 1)
theme_override_font_sizes/font_size = 35
text = "LOGIN"
flat = true

[node name="Register" type="Button" parent="GUI/Control/Login/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.576471, 0.576471, 0.576471, 1)
theme_override_font_sizes/font_size = 35
text = "REGISTER"
flat = true

[node name="HTTPLogin" type="HTTPRequest" parent="GUI/Control/Login"]

[node name="HTTPProfile" type="HTTPRequest" parent="GUI/Control/Login"]

[node name="Charge_icon" type="Sprite2D" parent="GUI/Control"]
visible = false
texture = ExtResource("26_4a7rt")

[connection signal="body_entered" from="Settings/DoorCreate/Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="pressed" from="GUI/Control/MarginContainer/VBoxContainer/VBoxContainer/Enter" to="." method="_on_enter_pressed"]
[connection signal="pressed" from="GUI/Control/MarginContainer/VBoxContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="GUI/Control/MarginContainer/VBoxContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="GUI/Control/Register/PanelContainer/VBoxContainer/HBoxContainer/RegisterButton" to="GUI/Control/Register" method="_on_register_button_pressed"]
[connection signal="pressed" from="GUI/Control/Register/PanelContainer/VBoxContainer/HBoxContainer/ExitRegister" to="GUI/Control/Register" method="_on_exit_register_pressed"]
[connection signal="request_completed" from="GUI/Control/Register/HTTPRegister" to="GUI/Control/Register" method="_on_http_register_request_completed"]
[connection signal="pressed" from="GUI/Control/Login/PanelContainer/VBoxContainer/HBoxContainer/Login" to="GUI/Control/Login" method="_on_login_pressed"]
[connection signal="pressed" from="GUI/Control/Login/PanelContainer/VBoxContainer/HBoxContainer/Register" to="." method="_on_register_pressed"]
